[package]
name = "parallel_smart_monitoring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tornado_executor_smart_monitoring_check_result = { path = "../smart_monitoring_check_result" }
tornado_common.workspace = true
tornado_common_api.workspace = true
tornado_executor_common.workspace = true

tokio = "1"
async-trait = "0.1"
futures = "0.3"
futures-lite = "1.13"