[package]
name = "satellite_smart_monitoring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tornado_common.workspace = true
tornado_common_api.workspace = true
tornado_executor_common.workspace = true

serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
bitfield-struct = "0.4"
maplit = "1.0"
tokio = { version = "1" }
tokio-netstring-trait = {  version = "0.1.0", features = ["err_drop_message"] }
tokio-rustls = "0.24"
webpki = "0.22"
rustls-pemfile = "1.0"
flume = "0.10"
env_logger = "0.10"
log = "0.4"
thiserror = "1"
async-trait = "0.1"